--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,11 @@
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
 		</dependency>
-<!-- 
+
 		<dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka-clients</artifactId>
-		</dependency> -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -54,22 +54,11 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka-streams</artifactId>
-		</dependency> -->
-
 		<dependency>
 			<groupId>io.confluent</groupId>
 			<artifactId>kafka-streams-protobuf-serde</artifactId>
 			<version>5.5.1</version>
 		</dependency>
-
-		<!-- <dependency>
-			<groupId>io.confluent</groupId>
-			<artifactId>kafka-protobuf-serializer</artifactId>
-			<version>5.5.1</version>
-		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
