--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.kafka.properties.schema.registry.url=http://localhost:8081
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufSerializer
 # consumer configuration
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 # workaround for protobuf consumer 
 spring.kafka.consumer.properties.fetch.max.wait.ms=500 
