--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.google.protobuf</groupId>
-			<artifactId>protobuf-java</artifactId>
-			<version>3.13.0</version>
+			<groupId>io.dmcapps</groupId>
+			<artifactId>catalog-protobuf</artifactId>
+			<version>0.1.0</version>
 		</dependency>
 
 		<dependency>
@@ -76,68 +76,10 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.github.os72</groupId>
-				<artifactId>protoc-jar-maven-plugin</artifactId>
-				<version>3.11.4</version>
-				<executions>
-					<execution>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<inputDirectories>
-								<include>${project.basedir}/src/main/proto</include>
-							</inputDirectories>
-							<outputTargets>
-								<outputTarget>
-									<type>java</type>
-									<addSources>main</addSources>
-									<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
-								</outputTarget>
-							</outputTargets>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-		  <id>dlombok</id>
-		  <build>
-			<plugins>
-			  <plugin>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok-maven-plugin</artifactId>
-				<version>1.18.12.0</version>
-				<executions>
-				  <execution>
-					<phase>generate-dlombok-sources</phase>
-					<goals>
-					  <goal>delombok</goal>
-					</goals>
-				  </execution>
-				</executions>
-				<configuration>
-				  <sourceDirectory>${lombokSource}</sourceDirectory>
-				  <verbose>true</verbose>
-				  <formatPreferences>
-					<generateDelombokComment>skip</generateDelombokComment>
-					<javaLangAsFQN>skip</javaLangAsFQN>
-					<suppressWarnings>skip</suppressWarnings>
-				  </formatPreferences>
-				</configuration>
-			  </plugin>
-			</plugins>
-		  </build>
-		</profile>
-	  </profiles>
 
 </project>
